# iron

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fleet.toml
.github/workflows/: infra.yml  publish.yml  rust.yml
ansible/: ansible.cfg  deploy.yml  dns.yml  inventory.yml  main.yml  requirements.yml  setup.yml
ansible/group_vars/: all.yml  db.yml  game.yml  secrets.yml  web.yml
compose/: db.yml  game.yml  social.yml  web.yml
discord-bot/: .env.example  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
discord-bot/src/: client.ts  config.ts  deploy-commands.ts  index.ts  types.ts
discord-bot/src/commands/: ping.ts
discord-bot/src/events/: guildMemberAdd.ts  interactionCreate.ts  ready.ts
discord-bot/src/lib/: logger.ts
discord-bot/src/loaders/: commandLoader.ts  eventLoader.ts
discord-bot/tests/: config.test.ts
docs/design/: notification-system.md
src/: app.rs  caddy.rs  check.rs  cli.rs  cloudflare.rs  compose.rs  config.rs  db.rs  deploy.rs  env.rs  ghcr.rs  init.rs  lib.rs  login.rs  logs.rs  main.rs  notify.rs  remove.rs  restart.rs  runner.rs  server.rs  ssh.rs  status.rs  stop.rs  ui.rs  update.rs  version.rs
stacks/auth/: docker-compose.yml
stacks/caddy/: Caddyfile.j2  docker-compose.yml
stacks/game/: docker-compose.yml.j2
stacks/game-server/: docker-compose.yml.j2
stacks/game-web/: docker-compose.yml
stacks/site/: docker-compose.yml
stacks/talk/: docker-compose.yml
stacks/watchtower/: docker-compose.yml
stacks/wud/: .env.j2  docker-compose.yml  rollout.sh
templates/: env.social.j2  env.web.j2
tests/: app.rs  caddy.rs  cloudflare.rs  compose.rs  config.rs  db.rs  ghcr.rs  init.rs  login.rs  notify.rs  runner.rs  server.rs
