[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
openssh = "0.11"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
console = "0.15"
comfy-table = "7"
serde_json = "1"
toml_edit = "0.22"

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3.26.0"
