[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
openssh = "0.11"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
indicatif = "0.17"
console = "0.15"
comfy-table = "7"
serde_json = "1"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
strip = true
lto = true
overflow-checks = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
clone_on_ref_ptr = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
format_push_string = "allow"
too_many_lines = "allow"
